--- a/module/SelfServe/view/self-serve/finance/index.phtml
+++ b/module/SelfServe/view/self-serve/finance/index.phtml
@@ -1,6 +1,6 @@
 <div id="finance-authorisation">
-    <h1><?php echo $this->translate('Finance & Authorisation');?></h1>
-
+    <h1><?php echo $this->translate('Operating centres');?></h1>
+    <p>To follow...</p>
     <?php 
 
     //echo $this->partial('self-serve/forms/licence-type', array(
