--- a/module/SelfServe/view/self-serve/forms/licence-type.phtml
+++ b/module/SelfServe/view/self-serve/forms/licence-type.phtml
@@ -1,6 +1,4 @@
-<div id="licence-type">
-    <div><?php
+<?php
     $licenceTypeForm->prepare();
     echo $this->form($licenceTypeForm);
-    ?></div>
-</div>
+?>
