--- a/module/SelfServe/view/self-serve/dashboard/index.phtml
+++ b/module/SelfServe/view/self-serve/dashboard/index.phtml
@@ -1,5 +1,13 @@
-<div id="licence-type">
-    <h1><?php echo $this->translate('Dashboard');?></h1>
+<?php
+    echo $this->render(
+        '/partials/page-header.phtml',
+        array(
+        'pageTitle' => 'Dashboard',    
+        // 'pageSubTitle'=> ''
+        )
+    );
+?>
 
+<div class="three-quarters">
     <a href="/selfserve/dashboard/application/create">Apply for a new licence</a>
 </div>
