--- a/module/SelfServe/view/self-serve/licence/index.phtml
+++ b/module/SelfServe/view/self-serve/licence/index.phtml
@@ -1,8 +1,15 @@
-<div id="licence-type">
-    <h1><?php echo $this->translate('Licence type');?></h1>
+<?php
+    echo $this->render(
+        '/partials/page-header.phtml',
+        array(
+        'pageTitle' => 'Type of licence',    
+        // 'pageSubTitle'=> 'Tell us about the type of licence you are applying for'
+        )
+    );
+?>
 
+<div class="two-thirds">
     <?php 
-
     echo $this->partial('self-serve/forms/licence-type', array(
         'licenceTypeForm' => $licenceTypeForm,
     ));
