--- a/module/SelfServe/view/self-serve/finance/index.phtml
+++ b/module/SelfServe/view/self-serve/finance/index.phtml
@@ -7,7 +7,7 @@
 
 <!-- Vertical navigation -->
 <div class="one-quarter">
-    
+
 	<h4>Content</h4>
 	<ol class="vertical-navigation" role="navigation">
 			<li class="vertical-navigation__item">
@@ -26,51 +26,9 @@
 
 <div class="three-quarters">
 	<form>
-
-		<!-- Operating centers -->
-		<div class="table__header">
-			<h3>Operating centres</h3>
-			<div class="actions-container">
-				<input class="action--primary" type="submit" value="Add">
-				<input class="action--secondary" type="submit" value="Edit">
-				<input class="action--warning" type="submit" value="Delete">
-			</div><!-- end .actions-container -->
-		</div><!-- end .table__header -->
-		<div class="table__wrapper">
-			<table>
-				<thead>
-					<tr>
-						<th></th>
-						<th>Address</th>
-						<th>Vehicles</th>
-						<th>Trailers</th>
-						<th>Permission</th>
-						<th>Advertised</th>
-						<th>Proof</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<td><input name="row" type="radio"></td>
-						<td><a href="">24 Dulwich Road, Southwell</a></td>
-						<td>3</td>
-						<td>5</td>
-						<td>Yes</td>
-						<td>Yes</td>
-						<td>No</td>
-					</tr>
-					<tr>
-						<td><input name="row" type="radio"></td>
-						<td><a href="">177 Beeston Industrial Park</a></td>
-						<td>26</td>
-						<td>2</td>
-						<td>Yes</td>
-						<td>Yes</td>
-						<td>Yes</td>
-					</tr>
-				</tbody>
-			</table>
-		</div><!-- end .table-wrapper -->
+       <?php
+            echo $operatingCentres;
+       ?>
 	</form>
 
 	<!-- Authorised vehicles -->
@@ -119,7 +77,7 @@
 				</tbody>
 			</table>
 		</div><!-- end .table_wrapper -->
-		<p class="hint">Please upload copies of your accounts or bank statements to prove you have sufficient funds</p>		
+		<p class="hint">Please upload copies of your accounts or bank statements to prove you have sufficient funds</p>
 	</form>
 
 	<!-- Totals -->
