back to home button

--- a/module/SelfServe/view/self-serve/licence/index.phtml
+++ b/module/SelfServe/view/self-serve/licence/index.phtml
@@ -14,4 +14,5 @@
         'licenceTypeForm' => $licenceTypeForm,
     ));
     ?>
+    <a href="<?php echo $this->url('selfserve/dashboard-home'); ?>">Back to home</a>
 </div>
