--- a/module/SelfServe/view/self-serve/business/index.phtml
+++ b/module/SelfServe/view/self-serve/business/index.phtml
@@ -14,4 +14,5 @@
         'form' => $form,
     ));
 ?>
+<a href="<?php echo $this->url('selfserve/dashboard-home'); ?>">Back to home</a>
 </div><!-- end .two-thirds -->
