Throw exception when application can not be found

--- a/module/SelfServe/view/self-serve/forms/previous-history-finance.phtml
+++ b/module/SelfServe/view/self-serve/forms/previous-history-finance.phtml
@@ -12,6 +12,6 @@
         <?php echo $this->formRow($element); ?>
     <?php endforeach; ?>
     <?php echo $this->formRow($form->get('submit')); ?>
-    <?php echo $this->formHidden($form->get('version')); ?>
+    <?php echo $this->formRow($form->get('version')); ?>
 </fieldset>
 <?php echo $this->form()->closeTag(); ?>
