--- a/module/SelfServe/view/self-serve/vehicle-safety/add-vehicle.phtml
+++ b/module/SelfServe/view/self-serve/vehicle-safety/add-vehicle.phtml
@@ -14,4 +14,5 @@
         'form' => $form,
     ));
     ?>
+    <a href="<?php echo $this->url('selfserve/vehicle-safety', array(), true); ?>">Cancel</a>
 </div>
