--- a/module/SelfServe/view/self-serve/vehicle-safety/safety.phtml
+++ b/module/SelfServe/view/self-serve/vehicle-safety/safety.phtml
@@ -11,4 +11,5 @@
         array('form' => $form)
     );
     ?>
+    <a href="<?php echo $this->url('selfserve/dashboard-home'); ?>">Back to home</a>
 </div>
