--- a/module/SelfServe/view/self-serve/finance/layout.phtml
+++ b/module/SelfServe/view/self-serve/finance/layout.phtml
@@ -28,5 +28,6 @@
     </div><!-- end .one-quarter -->
     <div class="three-quarters">
         <?php echo $this->main; ?>
+        <a href="<?php echo $this->url('selfserve/dashboard-home'); ?>">Back to home</a>
     </div>
 </div>
