Added in work-in-progress to move journey to view helper.

--- a/module/SelfServe/view/self-serve/finance/index.phtml
+++ b/module/SelfServe/view/self-serve/finance/index.phtml
@@ -1,3 +1,12 @@
+<?php
+    echo $this->render(
+        'navigation/header.phtml',
+        array(
+        'statusArray' => $statusArray
+        )
+    );
+?>
+
 <div id="finance-authorisation">
     <h1><?php echo $this->translate('Operating centres');?></h1>
 
