Journey navigation now allows hopping around the application process.

--- a/module/SelfServe/view/self-serve/finance/layout.phtml
+++ b/module/SelfServe/view/self-serve/finance/layout.phtml
@@ -1,3 +1,6 @@
+<?php
+    echo $this->journey("operating-centre",$completionStatus,$applicationId);
+?>
 <div id="finance-authorisation">
     <!-- Vertical navigation -->
     <div class="one-quarter">
