--- a/module/SelfServe/view/self-serve/vehicle-safety/index.phtml
+++ b/module/SelfServe/view/self-serve/vehicle-safety/index.phtml
@@ -1,5 +1,9 @@
+<?php
+    echo $this->journey("vehicle-safety",$completionStatus,$applicationId);
+?>
+
 <h1><?php echo $this->translate('Vehicles & Safety');?></h1>
 
-<?php 
+<?php
 echo $vehicleTable;
 ?>
