--- a/module/SelfServe/view/self-serve/business/index.phtml
+++ b/module/SelfServe/view/self-serve/business/index.phtml
@@ -1,15 +1,17 @@
 <?php
+    echo $this->journey("business-type",$completionStatus,$applicationId);
+
     echo $this->render(
         '/partials/page-header.phtml',
         array(
-        'pageTitle' => 'Your business',    
+        'pageTitle' => 'Your business',
         // 'pageSubTitle'=> 'Tell us about the type of licence you are applying for'
         )
     );
 ?>
 
 <div class="two-thirds">
-<?php 
+<?php
     echo $this->partial('self-serve/forms/business-type', array(
         'form' => $form,
     ));
