--- a/module/SelfServe/view/self-serve/journey/item.phtml
+++ b/module/SelfServe/view/self-serve/journey/item.phtml
@@ -1,1 +1,9 @@
-    <li class="application__item <?php echo $status; ?>"><a href="<?php echo $link; ?>"><span><?php echo $title; ?></span></a></li>
+    <li class="application__item <?php echo $status; ?>">
+        <?php if ( $status != "current" ) { ?>
+            <a href="<?php echo $link; ?>">
+        <?php } ?>
+        <span><?php echo $title; ?></span>
+        <?php if ( $status != "current" ) { ?>
+            </a>
+        <?php } ?>
+    </li>
