--- a/module/SelfServe/view/self-serve/journey/item.phtml
+++ b/module/SelfServe/view/self-serve/journey/item.phtml
@@ -2,7 +2,7 @@
         <?php if ( $status != "current" ) { ?>
             <a href="<?php echo $link; ?>">
         <?php } ?>
-        <span><?php echo $title; ?></span>
+        <span><?php echo $this->translate($title); ?></span>
         <?php if ( $status != "current" ) { ?>
             </a>
         <?php } ?>
