Wrapped journey header in a full-width div.

--- a/module/SelfServe/view/self-serve/journey/header.phtml
+++ b/module/SelfServe/view/self-serve/journey/header.phtml
@@ -1,12 +1,14 @@
 <!-- start progress -->
-<ul class="application" role="navigation" >
-    <?php
-        foreach($applicationProcess as $applicationItem) {
-            echo $this->render(
-                        'self-serve/journey/item.phtml',
-                        $applicationItem
-            );
-        }
-    ?>
-</ul>
+<div class="full-width">
+    <ul class="application" role="navigation" >
+        <?php
+            foreach($applicationProcess as $applicationItem) {
+                echo $this->render(
+                            'self-serve/journey/item.phtml',
+                            $applicationItem
+                );
+            }
+        ?>
+    </ul>
+</div>
 <!-- end .progress -->
