Refactoring lots of controllers and layouts

--- a/module/SelfServe/view/self-serve/layout/withSubSections.phtml
+++ b/module/SelfServe/view/self-serve/layout/withSubSections.phtml
@@ -1,4 +1,4 @@
-<?php echo $this->journey('operating-centre', $completionStatus, $applicationId); ?>
+<?php echo $this->journey($journey, $completionStatus, $applicationId); ?>
 <!-- Vertical navigation -->
 <div class="one-quarter">
     <ol class="vertical-navigation" role="navigation">
