--- a/module/SelfServe/view/self-serve/forms/generic.phtml
+++ b/module/SelfServe/view/self-serve/forms/generic.phtml
@@ -1,3 +1,9 @@
 <?php
-$form->prepare();
-echo $this->form($form);
+echo $this->journey("payment-details",$completionStatus,$applicationId);
+?>
+<div class="full-width">
+<?php
+    $form->prepare();
+    echo $this->form($form);
+?>
+</div>
