Removed Summary and changed other page titles for OLCS-2665

--- a/module/SelfServe/view/self-serve/payment-details/index.phtml
+++ b/module/SelfServe/view/self-serve/payment-details/index.phtml
@@ -1,10 +1,10 @@
 <?php
-    echo $this->journey("payment-details",$completionStatus,$applicationId);
+    echo $this->journey("payment-submission",$completionStatus,$applicationId);
 
     echo $this->render(
         '/partials/page-header.phtml',
         array(
-        'pageTitle' => 'Payment details',
+        'pageTitle' => 'Payment & submission',
         // 'pageSubTitle'=> 'Tell us about the type of licence you are applying for'
         )
     );
