--- a/module/SelfServe/view/self-serve/declarations/index.phtml
+++ b/module/SelfServe/view/self-serve/declarations/index.phtml
@@ -4,7 +4,7 @@
     echo $this->render(
         '/partials/page-header.phtml',
         array(
-        'pageTitle' => 'Declarations'
+        'pageTitle' => 'Review & declarations'
         )
     );
 ?>
