Back Button change got Your business

--- a/module/SelfServe/view/self-serve/business/index.phtml
+++ b/module/SelfServe/view/self-serve/business/index.phtml
@@ -14,5 +14,5 @@
         'form' => $form,
     ));
 ?>
-<a href="<?php echo $this->url('selfserve/dashboard-home'); ?>">Back to home</a>
+<a href="<?php echo $this->url('selfserve/licence-type', ['step' => 'operator-location'], null, true); ?>">Back</a>
 </div><!-- end .two-thirds -->
