changed classes on journey stuff

--- a/module/SelfServe/view/self-serve/journey/header.phtml
+++ b/module/SelfServe/view/self-serve/journey/header.phtml
@@ -1,6 +1,6 @@
 <!-- start progress -->
 <div class="full-width">
-    <ul class="application" role="navigation" >
+    <ul class="app-navigation items-8" role="navigation" >
         <?php
             foreach($applicationProcess as $applicationItem) {
                 echo $this->render(
