--- a/module/SelfServe/view/self-serve/journey/item.phtml
+++ b/module/SelfServe/view/self-serve/journey/item.phtml
@@ -1,4 +1,4 @@
-    <li class="application__item <?php echo $status; ?>">
+    <li class="app-navigation__item <?php echo $status; ?>">
         <?php if ( $status != "current" ) { ?>
             <a href="<?php echo $link; ?>">
         <?php } ?>
