--- a/module/SelfServe/view/self-serve/declarations/index.phtml
+++ b/module/SelfServe/view/self-serve/declarations/index.phtml
@@ -8,5 +8,12 @@
         )
     );
 
+?>
+    <h2>
+        <small><a href="<?php echo $currentUrl ?>" class="right-aligned" target="_blank">View in another window</a></small>
+        Application summary
+    </h2>
+<?php
+
     echo $this->form($form);
 ?>
