Operating centre form and tbale

--- a/module/SelfServe/view/self-serve/journey/application/main.phtml
+++ b/module/SelfServe/view/self-serve/journey/application/main.phtml
@@ -1,4 +1,11 @@
 <?php
+if (isset($title)) {
+    ?>
+    <h2><?php echo $title; ?></h2>
+    <?php
+}
+
+
 if (isset($table)) {
     echo $table;
 }
