Styling for sub actions

--- a/module/SelfServe/view/self-serve/journey/application/main.phtml
+++ b/module/SelfServe/view/self-serve/journey/application/main.phtml
@@ -1,7 +1,7 @@
 <?php
 if (isset($title)) {
     ?>
-    <h2><?php echo $title; ?></h2>
+    <h2><?php echo $this->translate($title); ?></h2>
     <?php
 }
 
