--- a/module/SelfServe/view/self-serve/journey/application/layout.phtml
+++ b/module/SelfServe/view/self-serve/journey/application/layout.phtml
@@ -9,34 +9,37 @@ if (!empty($subSections)) {
     <h4><?php echo $this->translate('In this section'); ?></h4>
     <ol class="vertical-navigation" role="navigation">
         <?php
-
         foreach ($subSections as $key => $subSection) {
-
-            $label = $this->translate($subSection['label']);
-
-            if ($subSection['active']) {
-                ?>
-                <li class="current vertical-navigation__item">
-                    <?php echo $label; ?>
-                </li>
+            ?>
+            <li class="<?php echo $subSection['class']; ?> vertical-navigation__item">
                 <?php
-            } elseif (!$subSection['enabled']) {
-                ?>
-                <li class="disabled vertical-navigation__item">
-                    <?php echo $label; ?>
-                </li>
-                <?php
-            } else {
-                ?>
-                <li class="vertical-navigation__item">
-                    <a href="<?php echo $this->url($subSection['route'], (isset($subSection['routeParams']) ? $subSection['routeParams'] : array()), array(), true); ?>">
-                        <?php echo $label; ?>
+                if ($subSection['link']) {
+                    ?>
+                    <a href="<?php echo $this->url(
+                        $subSection['route'],
+                        (isset($subSection['routeParams']) ? $subSection['routeParams'] : array())
+                    ); ?>">
+                    <?php
+                }
+                echo $this->translate($subSection['label']);
+
+                if ($subSection['link']) {
+                    ?>
                     </a>
-                </li>
-                <?php
-            }
-        }
+                    <?php
+                }
 
+                if ($subSection['subAction']) {
+                    ?>
+                        <ul>
+                            <li><?php echo $this->translate($subSection['subAction']); ?></li>
+                        </ul>
+                    <?php
+                }
+                ?>
+            </li>
+            <?php
+        }
         ?>
     </ol><!-- end .vertical-navigation -->
 </div><!-- end .one-quarter -->
