ensure 'view in another window' link opens simplified layout

--- a/module/SelfServe/view/self-serve/declarations/index.phtml
+++ b/module/SelfServe/view/self-serve/declarations/index.phtml
@@ -12,7 +12,7 @@
 <div class="three-quarters">
     <div>
         <h2 class="inline">Application summary</h2>
-        <a href="<?php echo $currentUrl ?>" class="right-aligned    action--tertiary" target="_blank">View in another window</a>
+        <a href="<?php echo $this->url('selfserve/declarations-simple', ['applicationId' => $applicationId]) ?>" class="right-aligned    action--tertiary" target="_blank">View in another window</a>
     </div>
     <?php echo $this->form($form); ?>
 </div>
