Tidied up the journey controller, added not found page

--- a/module/SelfServe/view/self-serve/journey/application/layout.phtml
+++ b/module/SelfServe/view/self-serve/journey/application/layout.phtml
@@ -29,10 +29,10 @@ if (!empty($subSections)) {
                     <?php
                 }
 
-                if ($subSection['subAction']) {
+                if ($subSection['action']) {
                     ?>
                         <ul>
-                            <li><?php echo $this->translate($subSection['subAction']); ?></li>
+                            <li><?php echo $this->translate($subSection['action']); ?></li>
                         </ul>
                     <?php
                 }
