Work on adding OC, abstract work on loading and saving data

--- a/module/SelfServe/view/self-serve/journey/application/main.phtml
+++ b/module/SelfServe/view/self-serve/journey/application/main.phtml
@@ -12,5 +12,6 @@ if (isset($table)) {
 
 if (isset($form)) {
     $form->prepare();
+    echo $this->formErrors($form);
     echo $this->form($form);
 }
