--- a/module/SelfServe/view/self-serve/journey/application/layout.phtml
+++ b/module/SelfServe/view/self-serve/journey/application/layout.phtml
@@ -2,7 +2,7 @@
 
 echo $this->navigation;
 
-if (!empty($subSections)) {
+if (!empty($subSections) && count($subSections) > 1) {
     ?>
 <!-- Vertical navigation -->
 <div class="one-quarter">
