--- a/module/SelfServe/view/self-serve/layout/layout.phtml
+++ b/module/SelfServe/view/self-serve/layout/layout.phtml
@@ -8,7 +8,7 @@ if (!empty($subSections)) {
 <div class="one-quarter">
     <ol class="vertical-navigation" role="navigation">
         <?php
-
+        $subsectionNumber = 1;
         foreach ($subSections as $key => $subSection) {
 
             $label = $this->translate($subSection['label']);
@@ -16,18 +16,19 @@ if (!empty($subSections)) {
             if ($subSection['active'] || $subSection['disabled']) {
                 ?>
                 <li class="current vertical-navigation__item">
-                    <?php echo $label; ?>
+                    <?php echo $subsectionNumber . '. ' . $label; ?>
                 </li>
                 <?php
             } else {
                 ?>
                 <li class="vertical-navigation__item">
                     <a href="<?php echo $this->url($subSection['route'], $subSection['routeParams']); ?>">
-                        <?php echo $label; ?>
+                        <?php echo $subsectionNumber . '. ' . $label; ?>
                     </a>
                 </li>
                 <?php
             }
+            $subsectionNumber++;
         }
 
         ?>
