olcs-2802 text changes

--- a/module/SelfServe/view/self-serve/payment-details/complete.phtml
+++ b/module/SelfServe/view/self-serve/payment-details/complete.phtml
@@ -16,9 +16,9 @@
         <dt>Licence number</dt>
         <dd>OB767877</dd>
         <dt>Licence type</dt>
-        <dd>Restricted</dd>
+        <dd>Standard</dd>
         <dt>Type of operator</dt>
-        <dd>Public Service Vehicle</dd>
+        <dd>Goods Vehicle</dd>
         <dt>Date Submitted</dt>
         <dd>01/09/2014</dd>
     </dl>
