--- a/module/SelfServe/view/self-serve/application/payment-submission/summary.phtml
+++ b/module/SelfServe/view/self-serve/application/payment-submission/summary.phtml
@@ -28,8 +28,8 @@ echo $this->render(
             to 3 weeks. Should there be any issues with your application or further information required their team will
             contact you directly. You can track the progress of your application on your dashboard.</p>
     </div>
-    <div class="actions-container">
-        <a href="<?php echo $this->url('home/dashboard'); ?>" class="action--primary large">Take me to my dashboard</a>
-        <a href="#" class="action--secondary large">View my application summary</a>
-    </div>
+    <?php
+    $form->prepare();
+    echo $this->form($form);
+    ?>
 </div>
