Added flash messenger rendering to layout

--- a/module/SelfServe/view/self-serve/journey/application/layout.phtml
+++ b/module/SelfServe/view/self-serve/journey/application/layout.phtml
@@ -52,5 +52,6 @@ if (!empty($subSections) && count($subSections) > 1) {
 }
 
 ?>
+    <?php echo $this->flashMessengerAll(); ?>
     <?php echo $this->main; ?>
 </div>
