--- a/module/SelfServe/view/self-serve/journey/application/main.phtml
+++ b/module/SelfServe/view/self-serve/journey/application/main.phtml
@@ -15,3 +15,9 @@ if (isset($form)) {
     echo $this->formErrors($form);
     echo $this->form($form);
 }
+
+if (isset($scripts)) {
+    foreach ($scripts as $script) {
+        $this->inlineScript()->appendScript($script);
+    }
+}
