updated base template

--- a/module/SelfServe/view/self-serve/layout/base.phtml
+++ b/module/SelfServe/view/self-serve/layout/base.phtml
@@ -20,11 +20,11 @@
         <h2 class="global-header__title">Operator Licensing</h2>
       </div><!-- end .global-header__wrapper -->
     </div><!-- end .global-header -->
-    
+
     <div class="page-wrapper">
 
       <div class="user-header">
-        <p class="phase"><span class="phase__tag">alpha</span><span class="phase__message">This is a prototype – your <a href="">feedback</a> will help us improve it.</span></p> 
+        <p class="phase"><span class="phase__tag">alpha <?php echo $this->version(); ?></span><span class="phase__message">This is a prototype – your <a href="">feedback</a> will help us improve it.</span></p>
         <ul class="user-menu">
           <li class="user-menu__item">Sam Quayle:</li>
           <li class="user-menu__item"><a href="/styleguides/selfserve/">Dashboard</a></li>
