Trading names fixes

--- a/module/SelfServe/view/self-serve/error/index.phtml
+++ b/module/SelfServe/view/self-serve/error/index.phtml
@@ -1,10 +1,11 @@
-<?php 
-    echo $this->render('partials/page-header.phtml', 
+<?php
+echo $this->render(
+    'partials/page-header.phtml',
     array(
-        'pageTitle' => 'Something&#39s gone wrong', 
+        'pageTitle' => 'Something&#39s gone wrong',
         'pageSubTitle'=> $this->message
-        )
-    ); 
+    )
+);
 ?>
 
 <div class="full-width">
