--- a/module/SelfServe/view/self-serve/layout/base.phtml
+++ b/module/SelfServe/view/self-serve/layout/base.phtml
@@ -14,7 +14,7 @@
 
     <div role="banner" class="global-header">
       <div class="global-header__wrapper">
-        <a href="/styleguides/selfserve/" title="Go to the OLCS Selfserve styleguide homepage" class="global-header__logo">
+        <a href="/dashboard" title="Go to dashboard" class="global-header__logo">
           <img src="<?php echo $this->assetPath('/images/gov.uk_logotype_crown.png') ?>" alt="GOV.UK logo">GOV.UK
         </a>
         <h2 class="global-header__title">Operator Licensing</h2>
