Moved journey config

--- a/module/SelfServe/view/self-serve/dashboard/index.phtml
+++ b/module/SelfServe/view/self-serve/dashboard/index.phtml
@@ -10,7 +10,7 @@
 <div class="three-quarters">
     <?php echo $applicationsTable; ?>
     <div class="actions-container">
-        <a href="<?php echo $this->url('home/dashboard', array('action' => 'create')); ?>" class="action--primary large">
+        <a href="<?php echo $this->url('application_start', array('action' => 'create')); ?>" class="action--primary large">
             <?php echo $this->translate('application.new.button'); ?>
         </a>
     </div>
