fix /dashboard link, retab composer.json

--- a/module/SelfServe/view/self-serve/layout/base.phtml
+++ b/module/SelfServe/view/self-serve/layout/base.phtml
@@ -27,7 +27,7 @@
         <p class="phase"><span class="phase__tag">alpha <?php echo $this->version(); ?></span><span class="phase__message">This is a prototype – your <a href="">feedback</a> will help us improve it.</span></p>
         <ul class="user-menu">
           <li class="user-menu__item">Sam Quayle:</li>
-          <li class="user-menu__item"><a href="/styleguides/selfserve/">Dashboard</a></li>
+          <li class="user-menu__item"><a href="/dashboard">Dashboard</a></li>
           <li class="user-menu__item"><a href="">Sign out</a></li>
         </ul>
       </div><!-- end .user-header -->
