Variation application table added.

--- a/module/Olcs/view/self-serve/dashboard/index.phtml
+++ b/module/Olcs/view/self-serve/dashboard/index.phtml
@@ -11,6 +11,8 @@
 <div class="three-quarters">
     <?php echo $licencesTable; ?>
 
+    <?php echo $variationApplicationsTable; ?>
+
     <?php echo $applicationsTable; ?>
     <div class="actions-container">
         <a href="<?php echo $this->url('application_start', array('action' => 'create')); ?>" class="action--primary large">
