New create app functionality

--- a/module/Olcs/view/dashboard/index.phtml
+++ b/module/Olcs/view/dashboard/index.phtml
@@ -13,7 +13,7 @@
     <?php echo $variations->render(); ?>
     <?php echo $applications->render(); ?>
     <div class="actions-container">
-        <a href="<?php echo $this->url('application/create'); ?>" class="action--primary large">
+        <a href="<?php echo $this->url('create_application'); ?>" class="action--primary large">
             <?php echo $this->translate('application.new.button'); ?>
         </a>
     </div>
