--- a/module/Olcs/view/dashboard/index.phtml
+++ b/module/Olcs/view/dashboard/index.phtml
@@ -9,14 +9,15 @@
 ?>
 
 <div class="three-quarters">
+    <?php echo $this->flashMessengerAll(); ?>
     <?php echo $licences->render(); ?>
-    <?php echo $variations->render(); ?>
-    <?php echo $applications->render(); ?>
     <div class="actions-container">
         <a href="<?php echo $this->url('create_application'); ?>" class="action--primary large">
             <?php echo $this->translate('application.new.button'); ?>
         </a>
     </div>
+    <?php echo $variations->render(); ?>
+    <?php echo $applications->render(); ?>
 </div>
 
 <div class="one-quarter">
