--- a/module/Olcs/view/application/overview.phtml
+++ b/module/Olcs/view/application/overview.phtml
@@ -1,4 +1,4 @@
-<div class="three-fifths">
+<div class="two-thirds">
     <a href="<?php echo $this->url('dashboard'); ?>">Home</a>
     <div class="page-header">
       <div class="page-header__wrapper">
@@ -9,6 +9,19 @@
       </div>
     </div>
 </div>
-<div class="two-fifths">
-a
+<div class="one-third">
+  <a href="#">Print application</a>
+  <a href="#">Delete application</a>
+  <p>
+    Created <br />
+    <strong><?php echo $createdOn; ?></strong>
+  </p>
+  <p>
+    Progress
+    <strong>X of Y sections complete</strong>
+  </p>
+  <p>
+    Status
+    <strong><?php echo $this->translate($status); ?></strong>
+  </p>
 </div>
